# cc-proj

./: .gitignore  README.md  SETUP_GUIDE.md
contoso-call-center-backend/: .env  pyproject.toml  requirements.txt  test_azure_openai.py  test_batch_audio.py
contoso-call-center-backend/app/: main.py  models.py
contoso-call-center-backend/app/services/: __init__.py  audio_generator.py  azure_batch_audio_generator.py  azure_openai_generator.py  data_generator.py  transcript_generator.py
contoso-call-center-backend/generated_transcripts/: contoso_call_20250627_140005_call_1.txt  contoso_call_20250627_141817_call_1.txt  contoso_call_20250627_141942_call_1.txt  contoso_call_20250627_142532_call_1.txt  contoso_call_20250627_142600_call_1.txt  contoso_call_20250627_142656_call_1.txt  contoso_call_20250627_144636_call_1.txt  contoso_call_20250627_144704_call_1.txt  contoso_call_20250627_144927_call_1.txt  contoso_call_20250630_151756_call_1.txt  contoso_call_20250630_151952_call_1.txt  contoso_call_20250630_152102_call_1.txt  contoso_call_20250630_152132_call_2.txt  contoso_call_20250630_152157_call_3.txt
contoso-call-center-frontend/: index.html  package-lock.json  package.json
contoso-call-center-frontend/src/: App.tsx
contoso-call-center-generator/: .env.example  README.md  app.py  audio_generator.py  data_generator.py  pyproject.toml  requirements.txt  transcript_generator.py
